使用 Colaboratory 建立

--- a/1122.ipynb
+++ b/1122.ipynb
@@ -757,10 +757,22 @@
         "print(type(\"我是'變數D'\"))"
       ],
       "metadata": {
-        "id": "XDaiSq_J5J9k"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XDaiSq_J5J9k",
+        "outputId": "9c6ff09c-7e9b-4c47-9aea-bec034e6d9a2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
